# Currency--Conversion-System

./: .dockerenvfile  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  logging.yml  manage.py  pyproject.toml  pytest.ini
base/: application.py  asgi.py  urls.py  wsgi.py
base/settings/: common.py  development.py  docker.py  testing.py
base/utils/: common.py  middlewares.py  pagination.py
currency_conversion/: admin.py  apps.py  tasks.py  urls.py
currency_conversion/migrations/: 0001_initial.py  0002_alter_userconversion_result.py
currency_conversion/models/: __init__.py  currency.py  exchange_rate.py  user_conversion.py
currency_conversion/serializers/: __init__.py  currency.py  currency_serializer.py  exchange_rate_serializer.py  user_conversion_serializer.py
currency_conversion/utils/: validators.py
currency_conversion/views/: currency copy 2.py  currency.py  exchange_rate_view.py  user_conversion_view.py
helpers/: logger.py
nginx/: Dockerfile  nginx.conf
tests/: logging.yml
user_management/: apps.py  urls.py
user_management/admin/: __init__.py  ignored.py
user_management/models/: user.py
user_management/serializers/: admin.py  auth.py
user_management/templates/emails/: activate_account.html  reset_password.html
user_management/test/: test_change_password.py  test_login.py  test_register.py
user_management/utils/: group.py
user_management/views/: admin.py  auth.py
